tests/paczka1/fuzzy1/97158101.err
Error in line 6: S227 A964 83,3
Error in line 11: KEOJI S482 92,6
Error in line 14: P4zs)AJH2U6 A964 215,4
Error in line 10: P4zs3AJH2U6 A964 85,8
Error in line 23: P4zs3AJH2U6 S227 43,4
Error in line 7: S227 S482 94,2
Error in line 27: Cwp A37 5,8
Error in line 32: Cwp S227 81,9
